--- a/core/res/res/anim/activity_open_exit.xml
+++ b/core/res/res/anim/activity_open_exit.xml
@@ -17,7 +17,8 @@
 */
 -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:zAdjustment="normal">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#ff000000" android:zAdjustment="normal">
     <alpha android:fromAlpha="1.0" android:toAlpha="1.0"
             android:fillEnabled="true" android:fillBefore="false" android:fillAfter="false"
             android:duration="@android:integer/config_shortAnimTime"/>
@@ -26,7 +27,7 @@
             android:pivotX="50%p" android:pivotY="50%p"
             android:interpolator="@interpolator/decelerate_quint"
             android:fillEnabled="true"
-            android:fillBefore="false" android:fillAfter="false"
+            android:fillBefore="false" android:fillAfter="true"
             android:duration="@android:integer/config_shortAnimTime"/>
 
 </set>
