--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -96,6 +96,7 @@
                 android:id="@+id/battery"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:gravity="center_vertical|bottom"
                 android:paddingLeft="4dip"
                 />
             <com.android.systemui.statusbar.policy.CircleBattery
